<resources>
    <string name="app_name">代码&amp;妹子</string>

    <string name="action_settings">Settings</string>
    <string name="common_loading">加载中...</string>

    <string name="main_bottom_gank">干货</string>
    <string name="main_bottom_girl">妹子</string>
    <string name="main_bottom_video">视频</string>


    <string name="search">搜索</string>
    <string name="search_hint">老司机之路</string>

    <string name="transition_name_picture">picture</string>



    <string name="action_about">「关于」页面</string>
    <string name="about_app_name_introduce">代码&amp;妹子 \n 面向对象面向君\n不负代码不负卿</string>
    <string name="introduce_and_help">介绍与帮助</string>
    <string name="about_introduce">
        此应用是基于MD的支持库实现的，使用了主流的RxJava+Retrofit+MVP构建，其中的api来源于 http:gank.io
        \n开发测试机为三星s6，Android版本6.0。
        \n项目参考了drakeet -  https:github.com/drakeet/Meizhi
        \nburgessjp  - https:github.com/burgessjp/GanHuoIO
        \n\n我的 GitHub: https:github.com/sfyc23
    </string>



    <string name="about_developers">开发人员</string>
    <string name="about_developer_and_designer">主要 Android 开发 &amp; 设计</string>
    <string name="about_open_source_lis">用到的开源库（后续会继续补充）</string>
    <string name="about_open_source_libraries_list">
     事件总线\n
    de.greenrobot:eventbus:2.4.0\n
     \n
    view注入\n
    com.jakewharton:butterknife:8.2.1\n

    \n
    动画库\n
    com.nineoldandroids:library:2.4.0\n
    com.daimajia.easing:library:1.0.1@aar\n
    com.daimajia.androidanimations:library:1.1.3@aar\n
    \n
    log日志\n
    com.orhanobut:logger:1.15\n
    \n
    bottom-navigation\n
    com.aurelhubert:ahbottomnavigation:1.3.3\n

    \n
     dialogs\n
    com.afollestad.material-dialogs:core:0.8.5.9\n
    \n
    RxAndroid\n
    io.reactivex:rxandroid:1.2.0\n
    io.reactivex:rxjava:1.1.5\n
    com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar\n
    com.jakewharton.rxbinding:rxbinding:0.4.0\n
    \n
    Retrofit\n
    com.squareup.retrofit2:retrofit:2.1.0\n
    com.squareup.retrofit2:converter-gson:2.1.0\n
    com.squareup.retrofit2:adapter-rxjava:2.1.0\n
    com.squareup.okhttp:logging-interceptor:2.6.0\n
    com.squareup.okhttp3:okhttp:3.2.0\n
    \n
    gson\n
    com.google.code.gson:gson:2.2.4\n
    \n
    xrecyclerview\n
    com.jcodecraeer:xrecyclerview:1.2.7\n
    \n
    图片加载\n
    com.github.chrisbanes:PhotoView:1.2.6\n
    com.squareup.picasso:picasso:2.5.2\n

    </string>


</resources>
